syntax = "proto3";

package com.acme;

import 'google/protobuf/timestamp.proto';

import 'schema/encrypted_personal_data.proto';
import 'schema/subject.proto';

message FarmerRegisteredEvent {

  string uuid = 1 [(.piischema.subject_identifier) = true];

  oneof personal_data {
    ContactInfo contact_info = 2;
    piischema.EncryptedPersonalData encryptedPersonalData = 3;
  }

  google.protobuf.Timestamp registeredAt = 4;
  string referer = 5;

}

message ContactInfo {
  string name = 1;
  string phone_number = 2;
  string email = 3;
}